--- a/scss/components/_account-info.scss
+++ b/scss/components/_account-info.scss
@@ -7,10 +7,10 @@
     background: #f6f6f6;
 
     &__icon {
+        flex-shrink:0;
         display: flex;
         align-items: center;
         justify-content: center;
-
         width: 54px;
         height: 54px;
         border-radius: 8px;
@@ -28,5 +28,9 @@
         margin-top: 6px;
         font-size: 1.4rem;
         line-height: 142.857%;
+        
+        overflow: hidden;
+        text-overflow: ellipsis;
+white-space: nowrap;
     }
 }
