--- a/scss/pages/_profile.scss
+++ b/scss/pages/_profile.scss
@@ -80,6 +80,7 @@
         }
 
         &__icon {
+            padding: 16px;
             display: flex;
             align-items: center;
             justify-content: center;
